--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ input[type="checkbox"]{
 .area-msg{
   color:#E76F51;
   font-size:14px;
-  height: 1.2em;
+  height: 30px;
   padding-left: 10px;
 }
 /*=============================================*/
