--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ input[type="checkbox"]{
 }
 .calendar-header{
   margin:0 auto;
+  text-align: center;
 }
 .calendar-cell{
   border:1px solid #ccc;
@@ -982,4 +983,14 @@ input[type="checkbox"]{
   cursor: pointer;
   display: block;
   margin-right:30px;
+}
+/*=============================================*/
+/*カレンダー*/
+/*=============================================*/
+.table-bordered{
+  width:380px;
+  margin:0 auto;
+}
+.table-bordered tbody tr td{
+  text-align: center;
 }
